#159 fix date text cut off

--- a/src/app/shared/dashboard-date-selector/dashboard-date-selector.component.css
+++ b/src/app/shared/dashboard-date-selector/dashboard-date-selector.component.css
@@ -19,10 +19,7 @@ button.active {
     font-family: inherit;
     padding-left: 0 !important;
     padding-right: 0 !important;
-}
-
-.date-range-picker {
-    width: min-content;
+    text-align: center;
 }
 
 /* smaller date nagivate selector for mobile */
